--- a/jogo.html
+++ b/jogo.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 
-		<title>Estourando balões</title>
+		<title>Popping Baloons</title>
 
 		<script src="jogo.js"></script>
 
