--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<body>
 		<div>
 			<p>
-				<b>Nível: </b>
+				<b>Difficult: </b>
 				<select id="nivel_jogo">
-					<option value="1">Fácil</option>
+					<option value="1">Easy</option>
 					<option value="2">Normal</option>
-					<option value="3">Difícil</option>
+					<option value="3">Hard</option>
 				</select>
 			</p>
 			<br />
